Added CRUD functionality for database