@@ -2,47 +2,42 @@ package com.example.githubrepos.api.service;
 
 import com.example.githubrepos.api.error.exception.ApiServiceException;
 import com.example.githubrepos.api.error.exception.UserNameNotFoundException;
-import com.example.githubrepos.api.dto.RepositoriesResponseDTO;
+import com.example.githubrepos.api.dto.response.GitHubRepositoriesResponseDTO;
 import com.example.githubrepos.api.model.BranchModel;
 import com.example.githubrepos.client.GitHubApiClient;
 import com.example.githubrepos.client.dto.GitHubRepositoryResponseDTO;
 import feign.FeignException;
-import lombok.extern.log4j.Log4j2;
+import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-@Log4j2
+@AllArgsConstructor
 public class RepositoriesService {
 
     private final GitHubApiClient gitHubApiClient;
 
-    public RepositoriesService(GitHubApiClient gitHubApiClient) {
-        this.gitHubApiClient = gitHubApiClient;
-    }
-
-    public List<RepositoriesResponseDTO> getUserRepos(String username) {
+    public List<GitHubRepositoriesResponseDTO> getUserRepos(String username) {
         try {
             List<GitHubRepositoryResponseDTO> repos = gitHubApiClient.getRepositories(username);
-            List<RepositoriesResponseDTO> repositoriesResponseDTO = new ArrayList<>();
+            List<GitHubRepositoriesResponseDTO> gitHubRepositoriesResponseDTO = new ArrayList<>();
 
             repos.forEach(repo -> {
                 List<BranchModel> branchNames = gitHubApiClient.getBranches(username, repo.name())
                         .stream()
                         .map(branch -> new BranchModel(branch.name(), branch.commit().sha()))
-                        .collect(Collectors.toList());
+                        .toList();
 
-                repositoriesResponseDTO.add(new RepositoriesResponseDTO(
+                gitHubRepositoriesResponseDTO.add(new GitHubRepositoriesResponseDTO(
                         repo.name(),
                         repo.owner().login(),
                         branchNames
                 ));
             });
 
-            return repositoriesResponseDTO;
+            return gitHubRepositoriesResponseDTO;
         } catch (FeignException.FeignClientException exception) {
             throw new UserNameNotFoundException("User with name " + username + " not found");
         } catch (FeignException exception) {
